--- a/run/resources/public/index_dev.html
+++ b/run/resources/public/index_dev.html
@@ -4,7 +4,8 @@
         <meta charset='utf-8'>
         <title>re-com Demo (dev)</title>
 
-        <link rel="stylesheet" href="assets/css/bootstrap.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+        <!-- <link rel="stylesheet" href="assets/css/bootstrap.css"> -->
         <link rel="stylesheet" href="assets/css/material-design-iconic-font.min.css">
         <link rel="stylesheet" href="assets/css/re-com.css">
 
