--- a/run/resources/public/index_prod.html
+++ b/run/resources/public/index_prod.html
@@ -4,7 +4,8 @@
         <meta charset='utf-8'>
         <title>re-com Demo</title>
 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css"> -->
         <link rel="stylesheet" href="assets/css/material-design-iconic-font.min.css">
         <link rel="stylesheet" href="assets/css/re-com.css">
 
@@ -19,4 +20,3 @@
         </script>
     </body>
 </html>
-
